--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "zq_speed_box.js",
   "scripts": {
-    "start": "node --inspect zq_speed_shared.js",
+    "start": "node --inspect zq_speed_qd.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
